# pydocs

./: .env  .gitignore  Dockerfile  README.md  check_deps.py  dependency_updates.json  dev.docker-compose.yml  notes.txt  pgAdminServers.json  pyproject.toml
dev/: pdf-parsing.ipynb  pydantic-ai.ipynb
src/: main.py  manage.py
src/pydocs/: __init__.py  cli.py  config.py  database.py  topic_modeling.py  workflows.py
src/pydocs/alembic/: env.py
src/pydocs/alembic/versions/: 4c9b966f1673_first_revision.py  8e22851423b7_document.py
src/pydocs/models/: __init__.py  base.py  document.py  user.py
src/pydocs/schema/: file.py  user.py
tests/: README.md  conftest.py  pytest.ini  run_tests.py  test_config.py  test_database.py  test_main.py  test_models.py
tests/api/: test_files.py  test_users.py
tests/unit/: test_file_helpers.py
