[project]
name = "pydocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Scheer", email = "jonatron@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "beautifulsoup4>=4.14.3",
    "broadcaster>=0.3.1",
    "celery>=5.6.1",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "flower>=2.0.1",
    "fpdf2>=2.8.5",
    "gensim>=4.4.0",
    "gevent>=25.9.1",
    "granian[reload]>=2.6.0",
    "hf-xet>=1.2.0",
    "lark>=1.3.1",
    "llama-index>=0.14.12",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-openrouter>=0.4.2",
    "llama-index-readers-file>=0.5.6",
    "llama-index-readers-web>=0.5.6",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-storage-docstore-postgres>=0.4.1",
    "llama-index-storage-docstore-redis>=0.4.1",
    "llama-index-storage-index-store-postgres>=0.5.1",
    "llama-index-utils-workflow>=0.5.2",
    "llama-index-vector-stores-postgres>=0.7.2",
    "llama-index-workflows>=2.11.5",
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "niquests>=3.16.1",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "polars[calamine]>=1.35.2",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "pyarrow>=22.0.0",
    "pydantic-ai>=1.39.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.45",
    "sse-starlette>=3.1.2",
    "textual>=6.12.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]
